libcscutils/include/cscutils/table.h

    
    typedef enum {
        CSC_TABLE_INTEGER = 0,  
        CSC_TABLE_FLOAT = 1,    
        CSC_TABLE_STRING = 2    
    } csc_table_value_t;
    typedef enum {
        CSC_TABLE_CENTER = 0,  
        CSC_TABLE_LEFT = 1 ,   
        CSC_TABLE_RIGHT = 2    
    } csc_table_align_t;
    typedef struct _csc_table_t {
        int number_of_columns;             
        int number_of_rows;                
        int current_row;                   
        csc_table_column_t *columns;       
        int cp;                            
        csc_table_comment_t * comment;     
    } csc_table_t;
    csc_table_t * csc_table_new(int continous_print);
    csc_table_t * csc_table_new_from_table(csc_table_t *table);
    void csc_table_destroy(csc_table_t * table);
    void csc_table_clear(csc_table_t * table);
    void csc_table_print_fortran(csc_table_t *table, const char *colsep);
    int csc_table_save_ascii(const char *filename, csc_table_t *table, const char *colsep);
    int csc_table_save_latex(const char *filename, csc_table_t *table, int standalone);
    int  csc_table_add_column(csc_table_t *t, const char *name, csc_table_value_t type, csc_table_align_t align);
    int  csc_table_column_minwidth(csc_table_t *t, int column, int minwidth);
    int  csc_table_new_row(csc_table_t * t);
    int  csc_table_append_row(csc_table_t *t, csc_table_t *tab, int row);
    void  csc_table_set_entry_integer(csc_table_t *t, int column, int val);
    void  csc_table_set_entry_float(csc_table_t *t, int column, double val);
    void  csc_table_set_entry_string(csc_table_t *t, int column, char *val);
    int  csc_table_column_set_format(csc_table_t *t, int column, const char *fmt);
    int csc_table_max_row(csc_table_t * t, int column);
    int csc_table_min_row(csc_table_t * t, int column);
    int csc_table_comment_text(csc_table_t *t, const char * text);
    void csc_table_comment_date(csc_table_t *t );
    void csc_table_comment_sysinfo(csc_table_t * t);
    void csc_table_comment_openmp_info(csc_table_t *t);
    void csc_table_comment_cmake(csc_table_t *t);
    void csc_table_comment_compilerflags(csc_table_t *t);
    void csc_table_comment_allinfo(csc_table_t * t);
    int csc_table_comment_sign(csc_table_t *t, const char *sign);